fix: button text alignment to center

--- a/components/button.css
+++ b/components/button.css
@@ -27,6 +27,7 @@
 	text-decoration: none;
 	padding: 1.2rem 2.5rem;
 	display: flex;
+	justify-content: center;
 	color: inherit;
 	border-radius: 1rem;
 	transition: all 0.2s;
